[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/dialogue_tree/editor_dock.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogue_tree/scenes/EndNode.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/dialogue_tree/scenes/StartNode.tscn" type="PackedScene" id=3]

[node name="Editor Dock" type="Panel"]
margin_left = -1.0
margin_top = -1.0
margin_right = 1023.0
margin_bottom = 599.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopContainer" type="HBoxContainer" parent="TopBar"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="MenuButton" parent="TopBar/TopContainer"]
margin_right = 37.0
margin_bottom = 20.0
toggle_mode = false
text = "Add"
items = [ "Basic Dialogue", null, 0, false, false, 0, 0, null, "", false, "Conditonal", null, 0, false, false, 1, 0, null, "", false, "Choice", null, 0, false, false, 2, 0, null, "", false, "Random", null, 0, false, false, 3, 0, null, "", false ]

[node name="PrimaryGraphEditor" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 21.0
right_disconnects = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndNode" parent="PrimaryGraphEditor" instance=ExtResource( 2 )]
margin_right = 55.0
margin_bottom = 44.0
mouse_filter = 1

[node name="StartNode" parent="PrimaryGraphEditor" instance=ExtResource( 3 )]
margin_right = 61.0
margin_bottom = 44.0
mouse_filter = 1

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 114.0
margin_bottom = 88.0
items = [ "Basic Dialogue", null, 0, false, false, 0, 0, null, "", false, "Conditonal", null, 0, false, false, 1, 0, null, "", false, "Choice", null, 0, false, false, 2, 0, null, "", false, "Random", null, 0, false, false, 3, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="connection_request" from="PrimaryGraphEditor" to="." method="_on_PrimaryGraphEditor_connection_request"]
[connection signal="connection_to_empty" from="PrimaryGraphEditor" to="." method="_on_PrimaryGraphEditor_connection_to_empty"]
[connection signal="disconnection_request" from="PrimaryGraphEditor" to="." method="_on_PrimaryGraphEditor_disconnection_request"]
[connection signal="popup_request" from="PrimaryGraphEditor" to="." method="_on_PrimaryGraphEditor_popup_request"]
[connection signal="popup_hide" from="PopupMenu" to="." method="_on_PopupMenu_popup_hide"]
